# pinn-margaria-morton-2compartment

./: .gitignore  CHANGES.md  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: reproducibility.md
experiments/: run_identifiability_analysis.py  run_main_experiment.py  run_surrogate.py  run_transfer_conditional.py  run_transfer_multitask.py
src/pinn_bioenergetic/: __init__.py  baselines.py  config.py  identifiability.py  model.py  pinn.py  plotting.py  population.py  surrogate.py  transfer.py
